# ATT-MATD3

./: README.md  test.txt  tset2.txt
src/start_reinforcement_learning/: package.xml  setup.cfg  setup.py
src/start_reinforcement_learning/launch/: start_learning.launch.py
src/start_reinforcement_learning/start_reinforcement_learning/: maddpg_main.py
src/start_reinforcement_learning/start_reinforcement_learning/env_logic/: logic.py  restart_environment.py
src/start_reinforcement_learning/start_reinforcement_learning/maddpg_algorithm/: agent.py  buffer.py  maddpg.py  networks.py
src/start_rl_environment/: CMakeLists.txt  package.xml
src/start_rl_environment/description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/start_rl_environment/launch/: main.launch.py  spawn_robots.launch.py  start_robots.launch.py  start_world.launch.py
src/start_rl_environment/models/cylinder_g/: model.sdf
src/start_rl_environment/models/goal_box/: model.sdf
src/start_rl_environment/worlds/: map1.world  map2.world
src/start_rl_environment/worlds/map3.world/: model.config  model.sdf
