<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>start_reinforcement_learning</name>
  <version>0.0.0</version>
  <description>
    This package is responsible for training the robots using artificial intelligence to move autonomously in the provided environments.
    However its logic is NOT independent of the start_rl_environment.
  </description>
  <maintainer email="nohacks2701@gmail.com">Theo Moore-Calters</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>rclpy</depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>python3-torch</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
