<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>start_rl_environment</name>
  <version>0.0.0</version>
  <description>
    This package is responsible for starting up gazebo and loading in the pre-made maps that are used to train the robots, 
    Its also responsible for loading the actual robots, The different plugins and robot configurations can be found in this package.
  </description>
  <maintainer email="nohacks2701@gmail.com">Theo Moore-Calters</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>simple_launch</depend>
  <depend>gazebo_ros_pkgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
